[gd_scene load_steps=16 format=3 uid="uid://dcew6x5gjxhvt"]

[ext_resource type="Script" path="res://preguntasmodulos.gd" id="1_155ea"]
[ext_resource type="Texture2D" uid="uid://b4rsvu3rt2hv1" path="res://Recursos/Fondos/06869317-8b23-46b8-b45b-5b3f034e277a.png" id="1_vt4us"]
[ext_resource type="Texture2D" uid="uid://bgprpl3rq7nlg" path="res://Recursos/Botones/ISLAS/I1.png" id="4_hnvf5"]
[ext_resource type="Texture2D" uid="uid://byiun5kjoohr2" path="res://Recursos/Botones/ISLAS/I2.png" id="5_qxq78"]
[ext_resource type="Texture2D" uid="uid://b38u2unquyfs4" path="res://Recursos/Botones/ISLAS/I3.png" id="6_e0nik"]
[ext_resource type="Texture2D" uid="uid://dc6qlo7c2ryou" path="res://Recursos/Botones/ISLAS/I41.png" id="7_xfvli"]
[ext_resource type="Texture2D" uid="uid://cp5xb1lwkrwww" path="res://Recursos/Botones/ISLAS/I5.png" id="8_onqfo"]
[ext_resource type="Texture2D" uid="uid://kd1a83snd42i" path="res://Recursos/Botones/ISLAS/I6.png" id="9_ape0u"]
[ext_resource type="Texture2D" uid="uid://ccp4m2ofkejc1" path="res://Recursos/Botones/ISLAS/I7.png" id="10_0l01q"]
[ext_resource type="AudioStream" uid="uid://dlrfhdbmgi5yb" path="res://Recursos/audio/Rayman 2 - 1-13 - bonus level.mp3" id="11_12set"]
[ext_resource type="Texture2D" uid="uid://vjy5c2l8t6bt" path="res://Recursos/Botones/ISLAS/I8.png" id="11_40vys"]
[ext_resource type="Texture2D" uid="uid://vokanwgk54w3" path="res://Recursos/sprites/nube.png" id="12_jm3is"]

[sub_resource type="Animation" id="Animation_g6umh"]
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3.1, 5.06667, 7.06667, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-53, 340), Vector2(294, 465), Vector2(577, 386), Vector2(829.63, 471.941), Vector2(963.581, 406.394), Vector2(1097.53, 411.436), Vector2(1097.53, 411.436)]
}

[sub_resource type="Animation" id="Animation_1ybvk"]
resource_name = "nube"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 2.8, 2.93333, 3, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-43, 320), Vector2(353, 428), Vector2(489, 377), Vector2(707, 380), Vector2(737, 380), Vector2(766, 380), Vector2(766, 380)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_42cip"]
_data = {
"RESET": SubResource("Animation_g6umh"),
"nube": SubResource("Animation_1ybvk")
}

[node name="PREGUNTASMODULOS" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_155ea")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 13.0
offset_right = 317.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.694285, 0.991648)
mouse_default_cursor_shape = 6
horizontal_scroll_mode = 0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer"]
custom_minimum_size = Vector2(0, 2000)
layout_mode = 2
texture = ExtResource("1_vt4us")

[node name="Nube" type="Sprite2D" parent="ScrollContainer/TextureRect"]
position = Vector2(-53, 340)
scale = Vector2(0.432099, 0.302527)
texture = ExtResource("12_jm3is")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScrollContainer/TextureRect/Nube"]
libraries = {
"": SubResource("AnimationLibrary_42cip")
}
autoplay = "RESET"

[node name="BotonModulo1" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 2
offset_left = 176.166
offset_top = 39.3285
offset_right = 684.166
offset_bottom = 547.328
scale = Vector2(0.6, 0.6)
icon = ExtResource("4_hnvf5")
flat = true

[node name="BotonModulo2" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 2
offset_left = 677.345
offset_top = 151.311
offset_right = 1185.34
offset_bottom = 659.311
scale = Vector2(0.6, 0.6)
icon = ExtResource("5_qxq78")
flat = true

[node name="BotonModulo3" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 2
offset_left = 120.769
offset_top = 439.919
offset_right = 628.769
offset_bottom = 947.919
scale = Vector2(0.6, 0.6)
icon = ExtResource("6_e0nik")
flat = true

[node name="BotonModulo4" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 2
offset_left = 636.389
offset_top = 606.43
offset_right = 1144.39
offset_bottom = 1114.43
scale = Vector2(0.6, 0.6)
icon = ExtResource("7_xfvli")
flat = true

[node name="BotonModulo5" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 2
offset_left = 140.655
offset_top = 845.336
offset_right = 648.655
offset_bottom = 1353.34
scale = Vector2(0.6, 0.6)
icon = ExtResource("8_onqfo")
flat = true

[node name="BotonModulo6" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 2
offset_left = 538.379
offset_top = 1056.49
offset_right = 1046.38
offset_bottom = 1564.49
scale = Vector2(0.6, 0.6)
icon = ExtResource("9_ape0u")
flat = true

[node name="BotonModulo7" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 2
offset_left = 105.144
offset_top = 1356.93
offset_right = 613.144
offset_bottom = 1864.93
scale = Vector2(0.6, 0.6)
icon = ExtResource("10_0l01q")
flat = true

[node name="BotonModulo8" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 2
offset_left = 632.128
offset_top = 1470.35
offset_right = 1140.13
offset_bottom = 1978.35
scale = Vector2(0.6, 0.6)
icon = ExtResource("11_40vys")
flat = true

[node name="GridContainer" type="GridContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 67.0
offset_top = 205.0
offset_right = 678.0
offset_bottom = 1108.0
theme_override_constants/h_separation = 57
theme_override_constants/v_separation = 133
columns = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_12set")
volume_db = -20.429
autoplay = true
